err/ccc-gistemp.err
Listing '.'...
Listing './bin'...
Compiling './bin/ccc-gistemp.py'...
***   File "./bin/ccc-gistemp.py", line 183
    print "Ignoring unknown parameter %r" % key
                                        ^
SyntaxError: Missing parentheses in call to 'print'

Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/CCCgistemp'...
Listing './lib/python3.5/site-packages/CCCgistemp/code'...
Listing './lib/python3.5/site-packages/CCCgistemp/tool'...
Compiling './lib/python3.5/site-packages/CCCgistemp/tool/ccc_tarfile.py'...
***   File "./lib/python3.5/site-packages/CCCgistemp/tool/ccc_tarfile.py", line 84
    MAXSIZE_MEMBER = 077777777777  # maximum size of a file (11 octal digits)
                                ^
SyntaxError: invalid token

Listing './lib/python3.5/site-packages/ccc_gistemp-0.6.1.egg-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './share'...
Listing './share/python-wheels'...
